2017-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.9.8

	* src/Makevars ($(USERLIBST)): Only strip on Linux

	* cleanup: Also remove src/*.dylib and vignette files

	* vignettes/RcppClassic-intro.Rmd: Minor updates
	* vignettes/pinp.cls: Minor updates from pinp package

2017-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.9.7

	* vignettes/RcppClassic-intro.Rmd: Converted from Rnw to Rmd using
	the new 'pinp' package
	* vignettes/pinp.cls: Added for vignette use

	* src/init.c: New file with (empty) registration (as no .Call() here)
	* NAMESPACE: Added .registration=TRUE to useDynLib()

	* src/RcppFunction.cpp: Reindented, replaced tabs with spaces,
	which realigns code as intended and suppresses a new g++ warning
	* src/RcppResultSet.cpp: Idem
	* inst/include/classic/RcppResultSet__backward.h: Idem

	* src/Makevars: Strip libraries if /usr/bin/strip is present

	* .travis.yml: Converted to using run.sh from r-travis; added
	pinp; add edd/misc ppa for r-cran-pinp binary

2015-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.9.6

	* src/Makevars: Updated, one char change requested by CRAN Maintainers

2015-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppClassic-intro.Rnw: Small update for look&feel

2015-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppClassic-intro.Rnw: Small update regarding builds

2015-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppClassic-intro.Rnw: Updated build instructions
	* vignettes/Makefile: Deleted, no longer needed

	* inst/examples/RcppClassicExample/: Modernized package

2014-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Move methods from Depends: to Imports
	* NAMESPACE: Add 'import(methods)'

	* R/inline.R: Switch ':::' to '::' in two cases

	* cleanup: Remove (empty) inst/dir if it exists

	* vignettes/RcppClassic-intro.Rnw: Updated

2014-01-23  Dirk Eddelbuettel  <edd@debian.org>
