@@ -1,13 +1,13 @@
 Package: RcppClassic
-Title: Deprecated 'classic' Rcpp API
-Version: 0.9.8
-Date: 2017-09-19
+Title: Deprecated 'classic' 'Rcpp' 'API'
+Version: 0.9.9
+Date: 2017-11-19
 Author: Dirk Eddelbuettel and Romain Francois, with contributions by David Reiss,
  and based on code written during 2005 and 2006 by Dominick Samperi
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Description: The RcppClassic package provides a deprecated C++ library which
- facilitates the integration of R and C++. New projects should use the new Rcpp
- API in the Rcpp package.
+Description: The 'RcppClassic' package provides a deprecated C++ library which
+ facilitates the integration of R and C++. New projects should use the new 'Rcpp'
+ 'API' in the 'Rcpp' package.
 Depends: R (>= 2.12.0)
 Imports: Rcpp (>= 0.10.2), methods
 Suggests: RUnit, inline, knitr, rmarkdown, pinp
@@ -17,6 +17,6 @@ License: GPL (>= 2)
 MailingList: Please send questions and comments about Rcpp to
         rcpp-devel@lists.r-forge.r-project.org
 NeedsCompilation: yes
-Packaged: 2017-09-19 11:58:02 UTC; edd
+Packaged: 2017-11-19 15:30:12.912474 UTC; edd
 Repository: CRAN
-Date/Publication: 2017-09-22 22:56:36 UTC
+Date/Publication: 2017-11-19 17:17:32 UTC
