@@ -1,16 +1,16 @@
-7f35d5caf61c5fdb75ce474feddc0188 *ChangeLog
-a58823f671bdcc61531b8acb1c74fdce *DESCRIPTION
+b483570aa1e491cbb05f912310c29a02 *ChangeLog
+4e71fb2d9a42233949d2d4c2cbf58f31 *DESCRIPTION
 c8d899b6cf23e215b2a3364238b137e3 *NAMESPACE
-c40574cbbac2e3c864e014ef9ebc11a6 *R/inline.R
+e47af55a197e6cf0ec74a37858307f45 *R/inline.R
 a325916eda08cb0362c625fa22e6e03a *README.md
-6426614df77c5f0ff2125b75dbd8a2b4 *build/vignette.rds
+1e5b62ecb7778f29e4c27c02332c09d3 *build/vignette.rds
 2e26d1240f17c6f4e568400c31b8a721 *cleanup
 d80e1bc04c33ac2021e05029afa9c95e *inst/doc/RcppClassic-intro.R
-36f9e2db35d8252bf33dfe2b90c92c8a *inst/doc/RcppClassic-intro.Rmd
-e7f2d9248c72135c20bae0c40830fd1b *inst/doc/RcppClassic-intro.pdf
+45d37fe3eaf8b52707d55e1266ddec7a *inst/doc/RcppClassic-intro.Rmd
+3826c63b5db839056da16c6a78176d6d *inst/doc/RcppClassic-intro.pdf
 b3d861ae17dc10cc7975ce9234b07252 *inst/doc/RcppClassic-unitTests.R
 2225e0c032092459d0b834060a777623 *inst/doc/RcppClassic-unitTests.Rnw
-a353f475557252e1b0edd680d906ae15 *inst/doc/RcppClassic-unitTests.pdf
+946ae466c65dd17a51f8a3d2fd64a633 *inst/doc/RcppClassic-unitTests.pdf
 968bb5fc5f64ee24c620915a25f06aef *inst/examples/RcppClassicExample/DESCRIPTION
 091eca92b73bb2dfafc980cc258085df *inst/examples/RcppClassicExample/NAMESPACE
 04f0f50412ff00c383edefe290dc888b *inst/examples/RcppClassicExample/R/twoTimes.R
@@ -63,6 +63,6 @@ f81aed258aa85e5fe456a0a7a71f83ee *src/RcppStringVector.cpp
 56c392000697696f478df7dcb1ecaad7 *src/copyMessageToR.cpp
 4891f2a891d3d2fb12dc9b2bb7db6c0f *src/init.c
 e2a8d9898e6d6f17ba3dcf2035c0cb99 *tests/doRUnit.R
-36f9e2db35d8252bf33dfe2b90c92c8a *vignettes/RcppClassic-intro.Rmd
+45d37fe3eaf8b52707d55e1266ddec7a *vignettes/RcppClassic-intro.Rmd
 2225e0c032092459d0b834060a777623 *vignettes/RcppClassic-unitTests.Rnw
 f89b93ff4bf54a5d51186080f86bc3af *vignettes/unitTests/RcppClassic-unitTests.R
