@@ -1,3 +1,15 @@
+2017-11-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.9.9
+
+	* R/inline.R: Use '::' not ':::' for Rcpp.plugin.maker
+
+2017-10-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* .travis.yml: Minor cleanup
+
 2017-09-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.9.8
